# openrouter-rankings

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  gather_html.py  keys.txt  pyproject.toml
backend/: README.md  pyproject.toml
backend/llm_rankings/: aa_models.py  api.py  clean_data.py  database.py  or_models.py
src/openrouter_rankings/: button_groups.py  gather_html.py  utils.py
