[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "openrouter-rankings"
version = "0.1.0"
description = "A programatic tool to download and parse OpenRouter large language model rankings"
authors = [
    { name = "TheNathanSpace", email = "openrouter-rankings@usps.thenathan.space" }
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "playwright>=1.59.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.4",
    "pre-commit>=4.0.0",
    "validate-pyproject>=0.25",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
