[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-rankings"
version = "0.1.0"
description = "The goal is to consolidate multidimensional LLM metrics and benchmarks into a searchable platform."
authors = [
    { name = "TheNathanSpace", email = "llm-rankings@usps.thenathan.space" }
]
dependencies = [
    "requests==2.34.2",
    "python-dotenv==1.2.2",
    "levenshtein==0.27.3",
    "python-slugify[unidecode]==8.0.4",
    "pydantic==2.13.4",
    "pydantic_sqlite==0.5.1",
    "fastapi==0.136.3",
    "uvicorn==0.48.0"
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.4",
    "pre-commit>=4.0.0",
    "validate-pyproject>=0.25",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.markdownlint-cli2]
noProgress = true

[tool.markdownlint-cli2.config]
line-length = { line_length = 120 }
